--- a/index.html
+++ b/index.html
@@ -251,14 +251,14 @@
         <!-- End Counts Section -->
 
         <!-- ======= About Video Section ======= -->
-        <section id="about-video" class="about-video">
-            <div class="container" data-aos="fade-up">
+        <section id="about-video" class="about-video bg-packages">
+            <div class="container " data-aos="fade-up">
 
                 <div class="col-lg-12 pt-3 pt-lg-0 content text-center" data-aos="fade-left" data-aos-delay="100">
-                    <h3 style="font-size: 2rem;">Tech Package</h3>
+                    <h3 style="font-size: 2rem;">Package</h3>
                 </div>
 
-                <div class="row my-5">
+                <div class="row my-5 bg-packages">
                     <div class="col-lg-6 pt-3 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
                         <h3>HSE (Health, Safety, and Environment)</h3>
                         <p>
@@ -274,7 +274,9 @@
 
 
                 </div>
-                <div class="row my-5">
+
+
+                <div class="row my-5 bg-packages">
 
                     <div class="col-lg-6 video-box align-self-baseline position-relative" data-aos="fade-right" data-aos-delay="100">
                         <img src="assets/img/about-video.jpg" class="img-fluid" alt="">
@@ -291,7 +293,8 @@
                     </div>
 
                 </div>
-                <div class="row my-5">
+
+                <div class="row my-5 bg-packages">
                     <div class="col-lg-6 pt-3 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
                         <h3>Frontend Web Development</h3>
                         <p>
@@ -305,7 +308,9 @@
 
                     </div>
                 </div>
-                <div class="row my-5">
+
+
+                <div class="row my-5 bg-packages">
 
                     <div class="col-lg-6 video-box align-self-baseline position-relative" data-aos="fade-right" data-aos-delay="100">
                         <img src="assets/img/about-video.jpg" class="img-fluid" alt="">
@@ -315,6 +320,74 @@
                         <h3>Product Design</h3>
 
 
+                        <p>
+                            Learning principles such as ideation, prototyping, and user experience design to foster creativity and problem-solving skills in developing innovative products.
+                        </p>
+                        <a href="./forms/register.php" class="btn btn-primary scrollto">Register</a>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- End About Video Section -->
+
+
+        <!-- ======= MOBILE PACKAGE SECTION ======= -->
+        <section id="about-video" class="about-video sm-packages">
+            <div class="col-lg-12 pt-3 pt-lg-0 content text-center" data-aos="fade-left" data-aos-delay="100">
+                <h3 style="font-size: 2rem;">Package</h3>
+            </div>
+            <div class="container" data-aos="fade-up">
+
+                <div class="row my-5 sm-packages">
+                    <div class="col-lg-6 pt-3 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
+                        <h3>HSE (Health, Safety, and Environment)</h3>
+
+                        <div class="col-lg-6 video-box align-self-baseline position-relative" data-aos="fade-right" data-aos-delay="100">
+                            <img src="assets/img/about-video.jpg" class="img-fluid" alt="">
+                        </div>
+
+                        <p>
+                            <strong>Digital Marketing</strong> Understanding various strategies and tools for effective online promotion, including social media, SEO, content marketing, email marketing, and analytics, to reach target audiences and drive
+                            business growth.
+                        </p>
+                        <a href="./forms/register.php" class="btn btn-primary scrollto">Register</a>
+                    </div>
+
+
+
+
+                </div>
+
+
+                <div class="row my-5 sm-packages">
+                    <div class="col-lg-6 pt-3 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
+                        <h3>Frontend Web Development</h3>
+                        <div class="col-lg-6 video-box align-self-baseline position-relative" data-aos="fade-right" data-aos-delay="100">
+                            <img src="assets/img/about-video.jpg" class="img-fluid" alt="">
+
+                        </div>
+
+                        <p>
+                            Mastering frontend technologies like HTML, CSS, and JavaScript to build interactive and user-friendly websites. This includes creating responsive designs, implementing web accessibility standards, and integrating multimedia content, enabling participants
+                            to pursue careers in web development or enhance their digital presence as entrepreneurs.
+                        </p>
+                        <a href="./forms/register.php" class="btn btn-primary scrollto">Register</a>
+                    </div>
+
+                </div>
+
+
+                <div class="row my-5 sm-packages">
+
+
+                    <div class="col-lg-6 pt-3 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
+                        <h3>Product Design</h3>
+
+
+                        <div class="col-lg-6 video-box align-self-baseline position-relative" data-aos="fade-right" data-aos-delay="100">
+                            <img src="assets/img/about-video.jpg" class="img-fluid" alt="">
+                        </div>
                         <p>
                             Learning principles such as ideation, prototyping, and user experience design to foster creativity and problem-solving skills in developing innovative products.
                         </p>
